--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="skipBtnColor">#007AFF</color>
     <color name="checkBoxColor">#A2A2A2</color>
     <color name="errorColor">#F82E2E</color>
+    <color name="strokeColor">#9D9D9D</color>
 
 <!--DropShadow Colors-->
     <color name="shadowEndColor">#992e3436</color>
