--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -90,6 +90,7 @@
     <android.widget.Button
         android:id="@+id/btnPrev"
         style="@style/ButtonDarkText"
+        android:textFontWeight="300"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
