--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,7 +44,7 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textFontWeight">600</item>
-        <item name="android:textColor">@color/textColor</item>
+        <item name="android:textColor">@color/darkTextButtonColor</item>
     </style>
 
     <style name="TextInputBox" parent="TextAppearance.AppCompat">
