--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -8,7 +8,7 @@
     tools:context=".AuthorizationActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvTitle"
         style="@style/BoldText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,23 +17,19 @@
         android:text="@string/title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
     
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvDesc"
         style="@style/RegularText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="23dp"
         android:text="@string/splashDesc"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivWomanWithCat"
         android:layout_width="wrap_content"
         android:layout_height="300dp"
         android:layout_marginTop="101dp"
@@ -42,7 +38,7 @@
         android:src="@drawable/ic_splash"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />
 
     <android.widget.Button
         android:id="@+id/btnLogin"
@@ -57,7 +53,7 @@
         android:text="@string/auth"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/ivWomanWithCat" />
 
     <android.widget.Button
         android:id="@+id/btnRegistration"
