--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -22,7 +22,7 @@
             android:layout_width="11dp"
             android:layout_height="21dp"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="35dp"
             android:background="@drawable/ic_back"
             android:fontFamily="@font/comfortaa"
             android:textColor="@color/textColor" />
@@ -32,7 +32,7 @@
             style="@style/SemiBoldText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="81dp"
+            android:layout_marginTop="26dp"
             android:text="@string/create_account"
             android:textAlignment="center"
             android:textSize="23sp"
@@ -189,7 +189,7 @@
 <!--Чекбокс-->
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/llConfPolicy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="27dp"
@@ -226,16 +226,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
-
-
-    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@drawable/shape_dropshadow"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        /> -->
+        app:layout_constraintTop_toBottomOf="@+id/llConfPolicy" />
 </androidx.constraintlayout.widget.ConstraintLayout>
