--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,17 @@
 
         <android.widget.Button
             android:id="@+id/btnPrev"
+            android:visibility="invisible"
+            android:layout_width="11dp"
+            android:layout_height="21dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="35dp"
+            android:background="@drawable/ic_back"
+            android:fontFamily="@font/comfortaa"
+            android:textColor="@color/textColor" />
+
+        <android.widget.Button
+            android:id="@+id/btnSettings"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginEnd="30dp"
@@ -29,7 +40,7 @@
             android:textColor="@color/textColor" />
 
         <TextView
-            android:id="@+id/tvCreateAccount"
+            android:id="@+id/tvWinTitle"
             style="@style/SemiBoldText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -58,6 +69,7 @@
             android:src="@drawable/ic_pfp" />
 
         <android.widget.Button
+            android:id="@+id/btnEdit"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_gravity="bottom|end"
@@ -138,7 +150,6 @@
     <FrameLayout
         android:id="@+id/frameLayout4"
         android:layout_width="match_parent"
-
         android:layout_height="105dp"
         android:background="@drawable/shape_dropshadow"
         app:layout_constraintBottom_toBottomOf="@+id/navigationView"
@@ -164,15 +175,13 @@
         android:id="@+id/navigationView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
         android:background="?android:attr/windowBackground"
         app:itemBackground="?android:attr/windowBackground"
         app:itemIconTint="#000"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 
 
