--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,13 +7,25 @@
     tools:context=".Fragments.SettingsFragment">
 
     <FrameLayout
+        android:id="@+id/headerDivider"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="41dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/shape_add_post_body"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <FrameLayout
         android:id="@+id/flNotifications"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="34dp"
+        android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/headerDivider">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -136,6 +148,17 @@
         <android.widget.Button
             style="@style/ButtonBackReversed" />
     </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/secondDivider"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="41dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="33dp"
+        android:background="@drawable/shape_add_post_body"
+        app:layout_constraintTop_toBottomOf="@+id/flDisplay"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
