--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="26dp"
+        android:paddingBottom="200dp"
         android:nestedScrollingEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
