--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,14 +2,19 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Home"
+    <item android:id="@+id/home"
+        android:title="Home"
         android:icon="@drawable/ic_home" />
-    <item android:title="Favourites"
+    <item android:id="@+id/favourites"
+        android:title="Favourites"
         android:icon="@drawable/ic_favourites" />
-    <item android:title="Petshop"
+    <item android:id="@+id/petshop"
+        android:title="Petshop"
         android:icon="@drawable/ic_petshop" />
-    <item android:title="Clips"
+    <item android:id="@+id/clips"
+        android:title="Clips"
         android:icon="@drawable/ic_clips" />
-    <item android:title="Profile"
+    <item android:id="@+id/profile"
+        android:title="Profile"
         android:icon="@drawable/ic_profile"/>
 </menu>
